# roads.sexy

./: .gitignore  README.md
hackatum-2019/: .gitignore  CMakeLists.txt
hackatum-2019/src/xodr_viewer/: perlin_noise.h  xodr_converter.cpp  xodr_converter.h  xodr_viewer_window.cpp
unity_rendering/Assets/: Extent.cs  ObjToMesh.cs  Road.cs  RoadGen.cs  RuntimeObjImporter.cs  fly.cs
unity_rendering/Assets/Materials/: asphalt 1.mat  asphalt 2.mat  asphalt 3.mat  asphalt 4.mat  asphalt 5.mat  asphalt 6.mat  asphalt 7.mat  asphalt 8.mat  asphalt 9.mat  asphalt.mat  asphalt_by_yangaroo_d2vliho.mat  grass.mat  square-defaultMat.mat  t-defaultMat.mat
unity_rendering/Assets/Scenes/: SampleScene.unity
unity_rendering/ProjectSettings/: ProjectSettings.asset
unity_rendering/Temp/: UnityTempFile-0284693f7361836489cc545bbb90ac15  UnityTempFile-0884911de9ba4714885192919deae74b  UnityTempFile-0afff4f424d5fc849857387d08edf16f  UnityTempFile-31c34ac3ba261d040b5317b31971248d  UnityTempFile-338f215bdccd03e4982f242d9d66d378  UnityTempFile-3ad9a38476a9fe64ab8ba06dee21825c  UnityTempFile-4d8a904895eeb31429f5c957841f98f8  UnityTempFile-5d94f8b131e9bd74ab88864b0cdd3672  UnityTempFile-68f427bb5e1e6be49a2b3e67de9453f2  UnityTempFile-827886933dc36aa49a9a987a511701e7  UnityTempFile-9646111994dfdcf48825e9d98884f7bb  UnityTempFile-a5c627f8eebfa474bb61e75d24e4041d  UnityTempFile-c1efdb537067a9541aa2f6b23213cb26  UnityTempFile-c62344593f44e7642971220f4090fe28  UnityTempFile-d5e1ad5ff62d960488ac92e3d4962a11  UnityTempFile-dc9edb4abc6735847ad1e353acbc6a2f  UnityTempFile-f3022a7a0fb552c4fb9d6179ab68234d  UnityTempFile-f9940f30a15fb074292c343c29e7cb9d  UnityTempFile-fdec6da3220117d499e546e762310374
