cmake_minimum_required(VERSION 3.14)
project(hackatum_2019)

set(CMAKE_CXX_STANDARD 14)

include_directories(src/extern/gtest/googlemock/include)
include_directories(src/extern/gtest/googlemock/include/gmock)
include_directories(src/extern/gtest/googlemock/include/gmock/internal)
include_directories(src/extern/gtest/googlemock/include/gmock/internal/custom)
include_directories(src/extern/gtest/googlemock/test)
include_directories(src/extern/gtest/googletest/include)
include_directories(src/extern/gtest/googletest/include/gtest)
include_directories(src/extern/gtest/googletest/include/gtest/internal)
include_directories(src/extern/gtest/googletest/include/gtest/internal/custom)
include_directories(src/extern/gtest/googletest/samples)
include_directories(src/extern/gtest/googletest/src)
include_directories(src/extern/gtest/googletest/test)
include_directories(src/extern/gtest/googletest/xcode/Samples/FrameworkSample)
include_directories(src/xodr)
include_directories(src/xodr/odrSpiral)
include_directories(src/xodr/test)
include_directories(src/xodr/validation)
include_directories(src/xodr/xml)
include_directories(src/xodr_viewer)

add_executable(hackatum_2019
        src/extern/gtest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        src/extern/gtest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        src/extern/gtest/googlemock/include/gmock/internal/custom/gmock-port.h
        src/extern/gtest/googlemock/include/gmock/internal/gmock-generated-internal-utils.h
        src/extern/gtest/googlemock/include/gmock/internal/gmock-internal-utils.h
        src/extern/gtest/googlemock/include/gmock/internal/gmock-port.h
        src/extern/gtest/googlemock/include/gmock/gmock-actions.h
        src/extern/gtest/googlemock/include/gmock/gmock-cardinalities.h
        src/extern/gtest/googlemock/include/gmock/gmock-generated-actions.h
        src/extern/gtest/googlemock/include/gmock/gmock-generated-function-mockers.h
        src/extern/gtest/googlemock/include/gmock/gmock-generated-matchers.h
        src/extern/gtest/googlemock/include/gmock/gmock-generated-nice-strict.h
        src/extern/gtest/googlemock/include/gmock/gmock-matchers.h
        src/extern/gtest/googlemock/include/gmock/gmock-more-actions.h
        src/extern/gtest/googlemock/include/gmock/gmock-more-matchers.h
        src/extern/gtest/googlemock/include/gmock/gmock-spec-builders.h
        src/extern/gtest/googlemock/include/gmock/gmock.h
        src/extern/gtest/googlemock/src/gmock-all.cc
        src/extern/gtest/googlemock/src/gmock-cardinalities.cc
        src/extern/gtest/googlemock/src/gmock-internal-utils.cc
        src/extern/gtest/googlemock/src/gmock-matchers.cc
        src/extern/gtest/googlemock/src/gmock-spec-builders.cc
        src/extern/gtest/googlemock/src/gmock.cc
        src/extern/gtest/googlemock/src/gmock_main.cc
        src/extern/gtest/googlemock/test/gmock-actions_test.cc
        src/extern/gtest/googlemock/test/gmock-cardinalities_test.cc
        src/extern/gtest/googlemock/test/gmock-generated-actions_test.cc
        src/extern/gtest/googlemock/test/gmock-generated-function-mockers_test.cc
        src/extern/gtest/googlemock/test/gmock-generated-internal-utils_test.cc
        src/extern/gtest/googlemock/test/gmock-generated-matchers_test.cc
        src/extern/gtest/googlemock/test/gmock-internal-utils_test.cc
        src/extern/gtest/googlemock/test/gmock-matchers_test.cc
        src/extern/gtest/googlemock/test/gmock-more-actions_test.cc
        src/extern/gtest/googlemock/test/gmock-nice-strict_test.cc
        src/extern/gtest/googlemock/test/gmock-port_test.cc
        src/extern/gtest/googlemock/test/gmock-spec-builders_test.cc
        src/extern/gtest/googlemock/test/gmock_all_test.cc
        src/extern/gtest/googlemock/test/gmock_ex_test.cc
        src/extern/gtest/googlemock/test/gmock_leak_test_.cc
        src/extern/gtest/googlemock/test/gmock_link2_test.cc
        src/extern/gtest/googlemock/test/gmock_link_test.cc
        src/extern/gtest/googlemock/test/gmock_link_test.h
        src/extern/gtest/googlemock/test/gmock_output_test_.cc
        src/extern/gtest/googlemock/test/gmock_stress_test.cc
        src/extern/gtest/googlemock/test/gmock_test.cc
        src/extern/gtest/googletest/codegear/gtest_all.cc
        src/extern/gtest/googletest/codegear/gtest_link.cc
        src/extern/gtest/googletest/include/gtest/internal/custom/gtest-port.h
        src/extern/gtest/googletest/include/gtest/internal/custom/gtest-printers.h
        src/extern/gtest/googletest/include/gtest/internal/custom/gtest.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-death-test-internal.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-filepath.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-internal.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-linked_ptr.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-param-util-generated.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-param-util.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-port-arch.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-port.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-string.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-tuple.h
        src/extern/gtest/googletest/include/gtest/internal/gtest-type-util.h
        src/extern/gtest/googletest/include/gtest/gtest-death-test.h
        src/extern/gtest/googletest/include/gtest/gtest-message.h
        src/extern/gtest/googletest/include/gtest/gtest-param-test.h
        src/extern/gtest/googletest/include/gtest/gtest-printers.h
        src/extern/gtest/googletest/include/gtest/gtest-spi.h
        src/extern/gtest/googletest/include/gtest/gtest-test-part.h
        src/extern/gtest/googletest/include/gtest/gtest-typed-test.h
        src/extern/gtest/googletest/include/gtest/gtest.h
        src/extern/gtest/googletest/include/gtest/gtest_pred_impl.h
        src/extern/gtest/googletest/include/gtest/gtest_prod.h
        src/extern/gtest/googletest/samples/prime_tables.h
        src/extern/gtest/googletest/samples/sample1.cc
        src/extern/gtest/googletest/samples/sample1.h
        src/extern/gtest/googletest/samples/sample10_unittest.cc
        src/extern/gtest/googletest/samples/sample1_unittest.cc
        src/extern/gtest/googletest/samples/sample2.cc
        src/extern/gtest/googletest/samples/sample2.h
        src/extern/gtest/googletest/samples/sample2_unittest.cc
        src/extern/gtest/googletest/samples/sample3-inl.h
        src/extern/gtest/googletest/samples/sample3_unittest.cc
        src/extern/gtest/googletest/samples/sample4.cc
        src/extern/gtest/googletest/samples/sample4.h
        src/extern/gtest/googletest/samples/sample4_unittest.cc
        src/extern/gtest/googletest/samples/sample5_unittest.cc
        src/extern/gtest/googletest/samples/sample6_unittest.cc
        src/extern/gtest/googletest/samples/sample7_unittest.cc
        src/extern/gtest/googletest/samples/sample8_unittest.cc
        src/extern/gtest/googletest/samples/sample9_unittest.cc
        src/extern/gtest/googletest/src/gtest-all.cc
        src/extern/gtest/googletest/src/gtest-death-test.cc
        src/extern/gtest/googletest/src/gtest-filepath.cc
        src/extern/gtest/googletest/src/gtest-internal-inl.h
        src/extern/gtest/googletest/src/gtest-port.cc
        src/extern/gtest/googletest/src/gtest-printers.cc
        src/extern/gtest/googletest/src/gtest-test-part.cc
        src/extern/gtest/googletest/src/gtest-typed-test.cc
        src/extern/gtest/googletest/src/gtest.cc
        src/extern/gtest/googletest/src/gtest_main.cc
        src/extern/gtest/googletest/test/googletest-break-on-failure-unittest_.cc
        src/extern/gtest/googletest/test/googletest-catch-exceptions-test_.cc
        src/extern/gtest/googletest/test/googletest-color-test_.cc
        src/extern/gtest/googletest/test/googletest-death-test-test.cc
        src/extern/gtest/googletest/test/googletest-death-test_ex_test.cc
        src/extern/gtest/googletest/test/googletest-env-var-test_.cc
        src/extern/gtest/googletest/test/googletest-filepath-test.cc
        src/extern/gtest/googletest/test/googletest-filter-unittest_.cc
        src/extern/gtest/googletest/test/googletest-linked-ptr-test.cc
        src/extern/gtest/googletest/test/googletest-list-tests-unittest_.cc
        src/extern/gtest/googletest/test/googletest-listener-test.cc
        src/extern/gtest/googletest/test/googletest-message-test.cc
        src/extern/gtest/googletest/test/googletest-options-test.cc
        src/extern/gtest/googletest/test/googletest-output-test_.cc
        src/extern/gtest/googletest/test/googletest-param-test-invalid-name1-test_.cc
        src/extern/gtest/googletest/test/googletest-param-test-invalid-name2-test_.cc
        src/extern/gtest/googletest/test/googletest-param-test-test.cc
        src/extern/gtest/googletest/test/googletest-param-test-test.h
        src/extern/gtest/googletest/test/googletest-param-test2-test.cc
        src/extern/gtest/googletest/test/googletest-port-test.cc
        src/extern/gtest/googletest/test/googletest-printers-test.cc
        src/extern/gtest/googletest/test/googletest-shuffle-test_.cc
        src/extern/gtest/googletest/test/googletest-test-part-test.cc
        src/extern/gtest/googletest/test/googletest-test2_test.cc
        src/extern/gtest/googletest/test/googletest-throw-on-failure-test_.cc
        src/extern/gtest/googletest/test/googletest-tuple-test.cc
        src/extern/gtest/googletest/test/googletest-uninitialized-test_.cc
        src/extern/gtest/googletest/test/gtest-typed-test2_test.cc
        src/extern/gtest/googletest/test/gtest-typed-test_test.cc
        src/extern/gtest/googletest/test/gtest-typed-test_test.h
        src/extern/gtest/googletest/test/gtest-unittest-api_test.cc
        src/extern/gtest/googletest/test/gtest_all_test.cc
        src/extern/gtest/googletest/test/gtest_assert_by_exception_test.cc
        src/extern/gtest/googletest/test/gtest_environment_test.cc
        src/extern/gtest/googletest/test/gtest_help_test_.cc
        src/extern/gtest/googletest/test/gtest_list_output_unittest_.cc
        src/extern/gtest/googletest/test/gtest_main_unittest.cc
        src/extern/gtest/googletest/test/gtest_no_test_unittest.cc
        src/extern/gtest/googletest/test/gtest_pred_impl_unittest.cc
        src/extern/gtest/googletest/test/gtest_premature_exit_test.cc
        src/extern/gtest/googletest/test/gtest_prod_test.cc
        src/extern/gtest/googletest/test/gtest_repeat_test.cc
        src/extern/gtest/googletest/test/gtest_sole_header_test.cc
        src/extern/gtest/googletest/test/gtest_stress_test.cc
        src/extern/gtest/googletest/test/gtest_test_macro_stack_footprint_test.cc
        src/extern/gtest/googletest/test/gtest_testbridge_test_.cc
        src/extern/gtest/googletest/test/gtest_throw_on_failure_ex_test.cc
        src/extern/gtest/googletest/test/gtest_unittest.cc
        src/extern/gtest/googletest/test/gtest_xml_outfile1_test_.cc
        src/extern/gtest/googletest/test/gtest_xml_outfile2_test_.cc
        src/extern/gtest/googletest/test/gtest_xml_output_unittest_.cc
        src/extern/gtest/googletest/test/production.cc
        src/extern/gtest/googletest/test/production.h
        src/extern/gtest/googletest/xcode/Samples/FrameworkSample/widget.cc
        src/extern/gtest/googletest/xcode/Samples/FrameworkSample/widget.h
        src/extern/gtest/googletest/xcode/Samples/FrameworkSample/widget_test.cc
        src/xodr/odrSpiral/odrSpiral.c
        src/xodr/odrSpiral/odrSpiral.h
        src/xodr/test/xml/test_xml_attribute_parsers.cpp
        src/xodr/test/xml/test_xml_child_element_parsers.cpp
        src/xodr/test/xml/test_xml_reader.cpp
        src/xodr/test/xodr/test_junction.cpp
        src/xodr/test/xodr/test_lane_attributes.cpp
        src/xodr/test/xodr/test_lane_section.cpp
        src/xodr/test/xodr/test_parse_junction.cpp
        src/xodr/test/xodr/test_parse_lane_section.cpp
        src/xodr/test/xodr/test_parse_reference_line.cpp
        src/xodr/test/xodr/test_parse_road.cpp
        src/xodr/test/xodr/test_parse_road_link.cpp
        src/xodr/test/xodr/test_parse_road_object.cpp
        src/xodr/test/xodr/test_poly3.cpp
        src/xodr/test/xodr/test_reference_line.cpp
        src/xodr/test/xodr/test_road.cpp
        src/xodr/test/xodr/test_xodr_map.cpp
        src/xodr/test/xodr/test_xodr_object_reference.cpp
        src/xodr/test/xodr/test_xodr_utils.cpp
        src/xodr/test/xodr_validation/test_elevation.cpp
        src/xodr/test/xodr_validation/test_generated_curvature_polynomials.cpp
        src/xodr/test/xodr_validation/test_geometric_adjacency_validation.cpp
        src/xodr/test/xodr_validation/test_lane_boundary_intersection_validation.cpp
        src/xodr/test/xodr_validation/test_lane_link_validation.cpp
        src/xodr/test/xodr_validation/test_polynomials.cpp
        src/xodr/test/xodr_validation/test_road_link_validation.cpp
        src/xodr/test/xodr_validation/test_road_width_validation.cpp
        src/xodr/test/test_config.h
        src/xodr/validation/junction_validation.cpp
        src/xodr/validation/junction_validation.h
        src/xodr/validation/lane_link_validation.cpp
        src/xodr/validation/lane_link_validation.h
        src/xodr/validation/link_validation_base.h
        src/xodr/validation/road_link_validation.cpp
        src/xodr/validation/road_link_validation.h
        src/xodr/xml/xml_attribute_parsers.cpp
        src/xodr/xml/xml_attribute_parsers.h
        src/xodr/xml/xml_attribute_parsers_impl.h
        src/xodr/xml/xml_child_element_parsers.h
        src/xodr/xml/xml_child_element_parsers_impl.h
        src/xodr/xml/xml_parse_result.cpp
        src/xodr/xml/xml_parse_result.h
        src/xodr/xml/xml_reader.cpp
        src/xodr/xml/xml_reader.h
        src/xodr/elevation.cpp
        src/xodr/elevation.h
        src/xodr/junction.cpp
        src/xodr/junction.h
        src/xodr/junction_parser.cpp
        src/xodr/lane_attributes.cpp
        src/xodr/lane_attributes.h
        src/xodr/lane_id.h
        src/xodr/lane_section.cpp
        src/xodr/lane_section.h
        src/xodr/lane_section_parser.cpp
        src/xodr/poly3.cpp
        src/xodr/poly3.h
        src/xodr/reference_line.cpp
        src/xodr/reference_line.h
        src/xodr/reference_line_parser.cpp
        src/xodr/road.cpp
        src/xodr/road.h
        src/xodr/road_link.cpp
        src/xodr/road_link.h
        src/xodr/road_link_parser.cpp
        src/xodr/road_object.cpp
        src/xodr/road_object.h
        src/xodr/road_object_outline.cpp
        src/xodr/road_object_outline.h
        src/xodr/road_parser.cpp
        src/xodr/units.cpp
        src/xodr/units.h
        src/xodr/xodr_map.cpp
        src/xodr/xodr_map.h
        src/xodr/xodr_map_keys.cpp
        src/xodr/xodr_map_keys.h
        src/xodr/xodr_object_reference.cpp
        src/xodr/xodr_object_reference.h
        src/xodr/xodr_reader.cpp
        src/xodr/xodr_reader.h
        src/xodr/xodr_utils.h
        src/xodr/xodr_utils_impl.h
        src/xodr_viewer/bounding_rect.cpp
        src/xodr_viewer/bounding_rect.h
        src/xodr_viewer/main.cpp
        src/xodr_viewer/xodr_viewer_window.cpp
        src/xodr_viewer/xodr_viewer_window.h src/xodr_viewer/xodr_converter.cpp src/xodr_viewer/xodr_converter.h)
